--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!-- <div class="overlay"></div> -->
 
         <div class="design-image">
-          <img src="./assets/mobile.png" alt="" loading="lazy" />
+          <img src="./assets/mobile.png" alt="iphone image" loading="lazy" />
         </div>
 
         <div class="overlay-container">
@@ -171,56 +171,56 @@
 
         <div class="portfolio-images-container">
           <div class="image-box">
-            <img src="./assets/shuffle-01.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-01.jpg" alt="Shuffle-01" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-02.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-02.jpg" alt="Shuffle-02" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-03.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-03.jpg" alt="Shuffle-03" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-04.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-04.jpg" alt="Shuffle-04" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-05.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-05.jpg" alt="Shuffle-05" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-06.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-06.jpg" alt="Shuffle-06" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-07.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-07.jpg" alt="Shuffle-07" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
             </div>
           </div>
           <div class="image-box">
-            <img src="./assets/shuffle-08.jpg" alt="" loading="lazy" />
+            <img src="./assets/shuffle-08.jpg" alt="Shuffle-08" loading="lazy" width="900px" height="600px" />
             <div class="caption">
               <h4>Awesome Image</h4>
               <p>Photography</p>
@@ -297,7 +297,7 @@
               <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
 
               <div class="people">
-                <img src="./assets/skills-01.jpg" alt="" />
+                <img src="./assets/skills-01.jpg" loading="lazy" alt="person - 1" />
                 <div class="text">
                   Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                   <p>John Doe, CEO</p>
@@ -305,7 +305,7 @@
               </div>
 
               <div class="people">
-                <img src="./assets/skills-02.jpg" alt="" />
+                <img src="./assets/skills-02.jpg" loading="lazy" alt="person - 2" />
                 <div class="text">
                   Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                   <p>John Doe, CEO</p>
@@ -326,22 +326,22 @@
 
               <div class="progress-bar">
                 <h4>Adobe</h4>
-                <div class="bar"><span data-progress="90%" class="bar-90"></span></div>
+                <div class="bar"><span data-prog="90%" class="bar-90"></span></div>
               </div>
 
               <div class="progress-bar">
                 <h4>HTML & CSS</h4>
-                <div class="bar"><span data-progress="85%" class="bar-85"></span></div>
+                <div class="bar"><span data-prog="85%" class="bar-85"></span></div>
               </div>
 
               <div class="progress-bar">
                 <h4>JavaScript</h4>
-                <div class="bar"><span data-progress="80%" class="bar-80"></span></div>
+                <div class="bar"><span data-prog="80%" class="bar-80"></span></div>
               </div>
 
               <div class="progress-bar">
                 <h4>PHP</h4>
-                <div class="bar"><span data-progress="90%" class="bar-90"></span></div>
+                <div class="bar"><span data-prog="90%" class="bar-90"></span></div>
               </div>
             </div>
           </div>
@@ -442,7 +442,7 @@
           </div>
 
           <p class="text">Contact us if you have special request</p>
-          <a class="contact" href="#contact">Contact Us</a>
+          <a class="contact btn" href="#contact">Contact Us</a>
         </div>
       </section>
       <!-- End Pricing -->
@@ -472,7 +472,7 @@
                 <input type="text" name="name" autocomplete="off" placeholder="Your Name" />
                 <input type="email" name="mail" autocomplete="off" placeholder="Your Email" />
                 <textarea name="message" autocomplete="off" placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message" />
+                <input type="submit" class="btn" value="Send Message" />
               </form>
 
               <div class="text">
