--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <i class="fas fa-angle-left fa-2x change-background left"></i>
         <i class="fas fa-angle-right fa-2x change-background right"></i>
 
-        <ul class="page-cirles">
+        <ul class="page-circles">
           <li></li>
           <li></li>
           <li></li>
@@ -312,7 +312,7 @@
                 </div>
               </div>
               <div>
-                <ul class="page-cirles">
+                <ul class="page-circles">
                   <li></li>
                   <li></li>
                   <li></li>
