--- a/index.html
+++ b/index.html
@@ -472,7 +472,10 @@
                 <input type="text" name="name" autocomplete="off" placeholder="Your Name" />
                 <input type="email" name="mail" autocomplete="off" placeholder="Your Email" />
                 <textarea name="message" autocomplete="off" placeholder="Your Message"></textarea>
-                <input type="submit" class="btn" value="Send Message" />
+                <div class="buttons">
+                  <input type="reset" class="btn" value="Reset" />
+                  <input type="submit" class="btn" value="Send Message" />
+                </div>
               </form>
 
               <div class="text">
